--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   google_generative_ai: ^0.4.7
   flutter_markdown: ^0.7.7+1
   flutter_dotenv: ^5.1.0
+  google_maps_flutter: ^2.5.0
+  geolocator: ^10.1.0
 
 dev_dependencies:
   flutter_test:
